; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/freescale/dpaa/extr_dpaa_ethtool.c_dpaa_set_hash.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/freescale/dpaa/extr_dpaa_ethtool.c_dpaa_set_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.mac_device = type { %struct.fman_port** }
%struct.fman_port = type { i32 }
%struct.dpaa_priv = type { i32, %struct.mac_device* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, i32)* @dpaa_set_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dpaa_set_hash(%struct.net_device* %0, i32 %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mac_device*, align 8
  %6 = alloca %struct.fman_port*, align 8
  %7 = alloca %struct.dpaa_priv*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.net_device*, %struct.net_device** %3, align 8
  %9 = call %struct.dpaa_priv* @netdev_priv(%struct.net_device* %8)
  store %struct.dpaa_priv* %9, %struct.dpaa_priv** %7, align 8
  %10 = load %struct.dpaa_priv*, %struct.dpaa_priv** %7, align 8
  %11 = getelementptr inbounds %struct.dpaa_priv, %struct.dpaa_priv* %10, i32 0, i32 1
  %12 = load %struct.mac_device*, %struct.mac_device** %11, align 8
  store %struct.mac_device* %12, %struct.mac_device** %5, align 8
  %13 = load %struct.mac_device*, %struct.mac_device** %5, align 8
  %14 = getelementptr inbounds %struct.mac_device, %struct.mac_device* %13, i32 0, i32 0
  %15 = load %struct.fman_port**, %struct.fman_port*** %14, align 8
  %16 = getelementptr inbounds %struct.fman_port*, %struct.fman_port** %15, i64 0
  %17 = load %struct.fman_port*, %struct.fman_port** %16, align 8
  store %struct.fman_port* %17, %struct.fman_port** %6, align 8
  %18 = load %struct.fman_port*, %struct.fman_port** %6, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @fman_port_use_kg_hash(%struct.fman_port* %18, i32 %19)
  %21 = load i32, i32* %4, align 4
  %22 = load %struct.dpaa_priv*, %struct.dpaa_priv** %7, align 8
  %23 = getelementptr inbounds %struct.dpaa_priv, %struct.dpaa_priv* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  ret void
}

declare dso_local %struct.dpaa_priv* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @fman_port_use_kg_hash(%struct.fman_port*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
